--- a/charts/ipfs-cluster/templates/configmap-bootstrap.yaml
+++ b/charts/ipfs-cluster/templates/configmap-bootstrap.yaml
@@ -51,7 +51,7 @@ data:
       # ensure folder is writable
       su-exec "$user" test -w "$repo" || chown -R -- "$user" "$repo"
       # restart script with new privileges
-      exec su-exec "$user" sh "$0" "$@"
+      exec gosu "$user" sh "$0" "$@"
     fi
 
     if [ -f /data/ipfs/config ]; then
