--- a/charts/ipfs-cluster/templates/ingress.yaml
+++ b/charts/ipfs-cluster/templates/ingress.yaml
@@ -4,10 +4,10 @@ metadata:
   name: {{ .Release.Name }}
   annotations:
     external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
-    kubernetes.io/ingress.class: "nginx"
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
+  ingressClassName: "nginx"
   tls:
   - hosts:
       - {{ .Values.httpDomain }}
@@ -22,4 +22,4 @@ spec:
           service:
             name: {{ include "ipfs-cluster.serviceNameHttp" . }}
             port: 
-              name: gateway      
+              name: gateway
